# WeatherWidget-win11

./: .gitignore  README.md  WeatherWidget.sln
TaskbarEmbedDll/: CMakeLists.txt  TaskbarEmbed.cpp  TaskbarEmbed.h  TaskbarEmbedDll.vcxproj
WeatherWidget.App/: App.xaml  App.xaml.cs  ChildTaskbarWindow.cs  DllTaskbarEmbed.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeTaskbarWindow.cs  SecondaryIconWindow.xaml  SecondaryIconWindow.xaml.cs  TaskbarEmbedWindow.xaml  TaskbarEmbedWindow.xaml.cs  WeatherWidget.App.csproj
WeatherWidget.App/Models/: HumidityLevel.cs  Settings.cs  WeatherModels.cs
WeatherWidget.App/Services/: AppLogger.cs  AutoStartManager.cs  ClothingAdvisor.cs  ClothingImageProvider.cs  GeocodingClient.cs  GlobalHotkey.cs  GlobalMouseHook.cs  IconRenderer.cs  OpenMeteoClient.cs  SettingsStore.cs  TaskbarAnchor.cs  TaskbarEmbedExperiment.cs  ThemeManager.cs  WeatherArtProvider.cs  WeatherCacheStore.cs  WeatherCodeMapper.cs  WeatherIconMapper.cs  WeatherRepository.cs  WindowIconManager.cs
WeatherWidget.App/UI/: AmberTheme.xaml  CharcoalTheme.xaml  CherryTheme.xaml  DarkTheme.xaml  EmbedExperimentWindow.xaml  EmbedExperimentWindow.xaml.cs  ForestTheme.xaml  IvoryTheme.xaml  LavenderTheme.xaml  LightTheme.xaml  MidnightTheme.xaml  MintTheme.xaml  MochaTheme.xaml  ObsidianTheme.xaml  OceanTheme.xaml  PanelWindow.xaml  PanelWindow.xaml.cs  PearlTheme.xaml  RoseTheme.xaml  SlateTheme.xaml  SnowTheme.xaml  SunsetTheme.xaml  Theme.xaml
WeatherWidget.App/Utils/: ObservableObject.cs  RelayCommand.cs
docs/: TASKBAR_EMBED_TECH_REPORT.md  settings.md
(+11 files in other folders)
